apps/pre-apps/pre-jenkins/pre-jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
